# autotools

./: Makefile  Makefile.library  hello.c  hello_world.h  index.html  styles.css
01_library/: Makefile  hello_kitty.c  hello_kitty.h  hello_world.c  hello_world.h
03_library/: Makefile.am  main.c
04_versioning/: Makefile.am  configure.ac
